<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lawi13.ilmcraft.pixelpanel.Settings"
    android:id="@+id/DisplaySettings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:text="@string/textFPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewFPS"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="20dp" />

        <TextView
            android:text="60"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewFPSProgress"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="20dp" />

        <SeekBar
            android:id="@+id/seekBarFPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewFPS"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:max="100"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:progress="60"
            android:indeterminate="false" />

        <TextView
            android:text="@string/textMBrightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewMBrightness"
            android:layout_below="@+id/seekBarFPS"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="20dp" />

        <TextView
            android:text="255"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewMBrightnessProgress"
            android:layout_below="@+id/seekBarFPS"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="20dp" />

        <SeekBar
            android:id="@+id/seekBarMBrightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewMBrightness"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:max="255"
            android:progress="255"
            android:indeterminate="false"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <TextView
            android:text="@string/textIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewIpAdress"
            android:textIsSelectable="false"
            android:singleLine="true"
            android:editable="false"
            android:autoText="false"
            android:padding="20dp"
            android:layout_below="@+id/seekBarMBrightness"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextIP"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:autoText="false"
            android:clickable="true"
            android:contentDescription="@string/ipAddressHint"
            android:editable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/ipAddressHint"
            android:lines="1"
            android:layout_below="@+id/textViewIpAdress"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:layout_toLeftOf="@+id/btnReset"
            android:layout_toStartOf="@+id/btnReset"
            android:singleLine="true"
            android:text="@string/prefEditTextIP"
            android:inputType="phone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnShutdown"
            android:id="@+id/btnShutdown"
            android:singleLine="true"
            android:padding="20dp"
            android:layout_below="@+id/textView"
            android:layout_alignRight="@+id/btnReset"
            android:layout_alignEnd="@+id/btnReset"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReset"
            android:id="@+id/btnReset"
            android:singleLine="true"
            android:layout_alignTop="@+id/editTextIP"
            android:layout_alignRight="@+id/textViewMBrightnessProgress"
            android:layout_alignEnd="@+id/textViewMBrightnessProgress"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_above="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/btnShutdown"
            android:id="@+id/textView"
            android:layout_below="@+id/editTextIP"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="20dp" />


    </RelativeLayout>
</FrameLayout>
